env change in BE

--- a/my-project/.env
+++ b/my-project/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://mocthienlong-api.onrender.com/api
+VITE_API_URL=https://mocthienlong-api.onrender.com
 # firebase config keys
 # firebase config keys
 VITE_FIREBASE_APP_API_KEY="AIzaSyDgcvhYIvdUdHQFDwc8nf5wjnUfFxsTd_s"
