--- a/server/.env
+++ b/server/.env
@@ -12,11 +12,11 @@ MONGODB_URI=mongodb+srv://mocthienlong_db_user:mocthienlong2025@mocthienlongapp.
 # ==========================
 # 📧 BREVO SMTP (Sendinblue)
 # ==========================
-BREVO_HOST=smtp-relay.brevo.com
-BREVO_PORT=587
-BREVO_USER=9c5e03001@smtp-brevo.com
+# BREVO_HOST=smtp-relay.brevo.com
+# BREVO_PORT=587
+# BREVO_USER=9c5e03001@smtp-brevo.com
 BREVO_PASS=VGjbxMgEYPrTqaXS
-BREVO_FROM=MocThienLong <mocthienlong101@gmail.com>
+# BREVO_FROM=MocThienLong <mocthienlong101@gmail.com>
 
 # ==========================
 # 🔐 JWT TOKEN SECRETS
