--- a/my-project/.env
+++ b/my-project/.env
@@ -1,4 +1,5 @@
-VITE_API_URL=https://mocthienlong-api.onrender.com
+VITE_API_URL=http://localhost:8000
+
 # firebase config keys
 # firebase config keys
 VITE_FIREBASE_APP_API_KEY="AIzaSyDgcvhYIvdUdHQFDwc8nf5wjnUfFxsTd_s"
